--- a/style.scss
+++ b/style.scss
@@ -9,50 +9,54 @@ body {
   align-items: center;
 }
 .calculator {
-  height: 600px;
-  width: 400px;
+  height: 620px;
+  width: 500px;
   background-color: rgb(209, 205, 205);
 }
 .calculator-wrapper {
   margin: 2rem;
 }
 .display {
-  padding-inline: 2rem;
+  padding: 1rem 2rem;
   width: 100%;
   height: 100px;
   background-color: rgb(233, 89, 89);
-  font-size: 4rem;
   display: flex;
-  align-items: center;
-  justify-content: flex-end;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: flex-end;
+  .previous-calc {
+    font-size: 1rem;
+    color: white;
+    opacity: 0.5;
+  }
+  .current-calc {
+    font-size: 2rem;
+    color: white;
+  }
+}
+
+.col-two {
+  grid-column: span 2;
+}
+.row-two {
+  grid-row: span 2;
 }
 .keyboard {
   padding-block: 1rem;
   display: grid;
   gap: 0.5rem;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(4, 1fr);
+  grid-template-columns: repeat(5, 80px);
+  grid-template-rows: repeat(5, 80px);
 }
-input[type="button"] {
-  width: 75px;
-  height: 75px;
+button {
+  font-size: 1.5rem;
   background-color: grey;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 2rem;
-}
-input[type="text"] {
-  width: 100%;
-  height: 100%;
-  font-size: 2rem;
-  background-color: rgb(233, 89, 89);
+  color: white;
   border: 0;
   outline: 0;
-  text-align: right;
+  cursor: pointer;
 }
-.clear {
-  display: grid;
-  grid-column: span 3;
+button:hover {
+  background-color: rgb(75, 74, 74);
 }
